# ku

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  2026-07-08-项目进度看板.md  AGENTS.md  CMakeLists.txt  KU_MOTHER_TONGUE.md  LICENSE  README.md  memory_kernel_architecture.md  pyproject.toml  syntax_map.json
.github/workflows/: ci.yml
dao/: __init__.py  __main__.py  agent_core.ku  c_vm_runtime.py  cli.py  cn_parser.py  compiler.py  dao_core.c  dao_core_c.py  dao_ipc.c  dao_lexer.py  dao_parser.py  mcp_server.py  mcp_server_v2.py  memory_system.ku  runtime.py  semantic_core.py  test_builtins.ku  test_core.ku  test_dict_fix.ku  test_dict_local_var.ku  test_dict_simple.ku  test_func_dict.ku  test_http.ku  test_import.ku  test_load_ku.ku  test_module.ku  test_multiline_dict.ku  test_simple_dict.ku  test_socket.ku  test_socket_bytecode.json  test_socket_bytecode.ku  test_socket_simple.ku  tool_registry.ku  verify_core.py  vm_core.py
dao/benchmarks/: llm_accuracy.ku
dao/std/: agent.ku  agent_test.ku  async.ku  bootstrap.ku  compiler.ku  coroutine.ku  daodejing.ku  debug.ku  error.ku  experience.ku  fs.ku  http.ku  inspect.ku  io.ku  lexer.ku  list.ku  math.ku  memory.ku  memory_env.ku  memory_graph.ku  net.ku  parser.ku  patch.ku  scientific.ku  semantic_core.ku  string.ku  task_queue.ku  test_runner.ku  test_runner.py  test_runner_test.ku  tiandao.ku  tiandao_fast.ku  tiandao_mcp.ku  tool.ku  trace.ku  type.ku
demos/: README.md  daodejing_pipeline.ku  frontend_bootstrap.kub.json  frontend_compile_demo.kub.json  golden_path.ku  memory_6table_golden_path.ku  semantic_std_combo.kub.json  tiandao_golden_path.ku
docs/: AGENT_MCP_ONBOARDING.md  AGI_EXECUTABLE_MEMORY_ROADMAP.md  AGI母语语义内核规范.md  CODEX_MCP_TIANDAO.md  C_VM_接管审计.md  C_VM_补完指导文书.md  C运行时移植任务_给Codex.md  DAO_KERNEL_IMPLEMENTATION_GUIDE.md  DAO_SYSTEM_ARCHITECTURE.md  Ku自举Phase3_compiler_ku指导.md  LongCat反馈_PowerShell转义问题.md  MODULE_COMPLETION_PLAN.md  PRD_executable_memory_kernel.md  PROJECT_CONSTITUTION.md  PROJECT_STRUCTURE.md  README.md  TOOLCHAIN.md  道语言原语规范.md  道语言运行时修复方案.md
docs/linguist/: README.md  languages.yml
docs/linguist/samples/Ku/: example.ku
docs/plans/: 2026-06-11-ku-bootstrap-phase3-compiler-ku.md  2026-06-15-phase5-handoff.md  2026-06-15-脱离Python产品路线图.md  agi_mother_tongue_kernel.md  c_vm_takeover_framework.md  dao_next_foundation_plan.md  dao_std_tiandao_memory_migration.md
kernel/: BENCHMARKS.md  FFI.md  FORMAT.md  MIGRATION.md  README.md
kernel/benchmarks/: kernel_bench.cpp
kernel/fuzz/: module_fuzz.cpp  seed_generator.cpp
kernel/include/dao/: assemble.hpp  dao.h  disassemble.hpp  format.hpp  ku_migration.hpp
kernel/src/: assemble.cpp  disassemble.cpp  ku_migration.cpp  module_builder.cpp  runtime.cpp
kernel/tests/: abi_smoke.cpp  assemble_tests.cpp  c_header_smoke.c  disassemble_tests.cpp  kernel_tests.cpp  ku_migration_tests.cpp
ku/: __init__.py  __main__.py  compiler.py  ku_lexer.py  ku_parser.py  mcp_server.py  runtime.py
ku/std/: debug.ku  fs.ku  http.ku  inspect.ku  io.ku  lexer.ku  list.ku  math.ku  parser.ku  search.ku  string.ku  task_queue.ku  type.ku
syntaxes/: ku.tmLanguage.json
tests/: semantic_test_utils.py  test_bootstrap_compiler_vm_execute.py  test_bootstrap_frontend_vm_execute.py  test_c_vm_parity.py  test_c_vm_runtime_gateway.py  test_compiler_ku_phase3.py  test_dao_mcp_server.py  test_dao_parser_ku_bootstrap.py  test_daodejing.py  test_data_structures.py  test_experience_memory.py  test_linguist_assets.py  test_memory_env_core_parity.py  test_memory_ownership.py  test_parser_bootstrap.py  test_patch_core_parity.py  test_semantic_core.py  test_semantic_core_parity.py  test_semantic_core_vm_compile.py  test_semantic_core_vm_execute.py  test_thought.py  test_trace_core_parity.py
tools/: activate_toolchain.ps1  autonomous_loop.py  benchmark_kernel.ps1  bootstrap_toolchain.ps1  build_dao_core.ps1  build_kernel.ps1  doctor_toolchain.ps1  fuzz_kernel.ps1  generate_frontend_bootstrap.py  generate_frontend_compile_demo.py  generate_semantic_std_combo_demo.py  memcheck.cmd  test.ps1  verify_codex_mcp_tiandao.py  verify_module.ps1
