[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ku"
version = "0.7.0"
description = "Ku 语言运行时 — 玄璃的母语，AGI 的源代码"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
ku = "ku.runtime:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ku*"]
