[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ku"
version = "0.9.0"
description = "Ku/Dao language runtime: executable memory, bytecode, and C VM bootstrap"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
ku = "ku.runtime:main"
dao = "dao.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ku*", "dao*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
