[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ku"
version = "0.9.0"
description = "Ku/Dao executable-memory language runtime with a C VM, self-hosting frontend, and MCP gateway"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "ai-native",
    "c-vm",
    "dao-language",
    "executable-memory",
    "ku-language",
    "mcp",
    "self-hosting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Compilers",
]

[project.scripts]
ku = "ku.runtime:main"
dao = "dao.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ku*", "dao*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
